--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -85,7 +85,7 @@ admin_39 : "❍ ʀᴇᴍᴏᴠᴇᴅ 1 ᴜᴘᴠᴏᴛᴇ."
 admin_40 : "❍ ᴜᴘᴠᴏᴛᴇᴅ."
 
 start_1 : "{0} ɪs ᴀʟɪᴠᴇ ʙᴀʙʏ.\n\n<b>✫ ᴜᴘᴛɪᴍᴇ :</b> {1}"
-start_2 : "<b>● ʜᴇʏ ʙᴀʙʏ ᴡᴇʟᴄᴏᴍᴇ... 🌸⛈️</b>\n\n<b>❍ ɪ ᴀᴍ {1} </b>\n<b>•──────────────────────•</b>\n<b>❖ ɴᴏ ʟᴀɢ | ɴᴏ ᴀᴅs ᴍᴜsɪᴄ | ɴᴏ ᴘʀᴏᴍᴏ</b>\n<b>❖ ʟᴇᴛ's ʙᴇɪɴɢ ᴏʀᴅᴇʀ ᴛᴏ ʏᴏᴜʀ ɢʀᴏᴜᴘ</b>\n<b>❖ ᴛʏᴘᴇ | /help | ᴛᴏ ᴜɴᴠᴇɪʟ ʏᴏᴜʀ ʟᴏᴠᴇ</b>\n<b>❖ ᴄᴏɴᴛʀᴏʟ. ʏᴏᴜʀ. ɢʀᴏᴜᴘ ᴍᴜsɪᴄ ᴇғғᴏʀᴛʟᴇssʟʏ</b>\n<b>•──────────────────────</b>"
+start_2 : "<b>● ʜᴇʏ ʙᴀʙʏ ᴡᴇʟᴄᴏᴍᴇ... 🌸⛈️</b>\n\n<b>❍ ɪ ᴀᴍ {1} </b>\n<b>•──────────────────────•</b>\n<b>❖ ɴᴏ ʟᴀɢ | ɴᴏ ᴀᴅs ᴍᴜsɪᴄ | ɴᴏ ᴘʀᴏᴍᴏ</b>\n<b>❖ ʟᴇᴛ's ʙᴇɪɴɢ ᴏʀᴅᴇʀ ᴛᴏ ʏᴏᴜʀ ɢʀᴏᴜᴘ</b>\n<b>❖ ᴛʏᴘᴇ | /help | ᴛᴏ ᴜɴᴠᴇɪʟ ʏᴏᴜʀ ʟᴏᴠᴇ</b>\n<b>❖ ᴄᴏɴᴛʀᴏʟ. ʏᴏᴜʀ. ɢʀᴏᴜᴘ ᴍᴜsɪᴄ ᴇғғᴏʀᴛʟᴇssʟʏ</b>\n<b>•──────────────────────</b>\nn<b>🌷 ᴍᴀᴅᴇ ʙʏ :</b> <a href=\"https://t.me/dark_musictm\"> #𝟗𝟔᰻༨_𝐌͢ʌꝛʌ𝛕ʜʌ //- 🚩֣֟⇾ </a></blockquote>""
 start_3 : "❍ ʜᴇʏ {0},\nᴛʜɪs ɪs {1}\n\nᴛʜᴀɴᴋs ғᴏʀ ᴀᴅᴅɪɴɢ ᴍᴇ ɪɴ {2}, {3} ᴄᴀɴ ɴᴏᴡ ᴩʟᴀʏ sᴏɴɢs ɪɴ ᴛʜɪs ᴄʜᴀᴛ."
 start_4 : "🎄 <b>sᴜᴘᴇʀɢʀᴏᴜᴘ ɴᴇᴇᴅᴇᴅ</b> 🎄\n\nᴘʟᴇᴀsᴇ ᴄᴏɴᴠᴇʀᴛ ʏᴏᴜʀ <b>ɢʀᴏᴜᴘ</b> ᴛᴏ <b>sᴜᴘᴇʀɢʀᴏᴜᴘ</b> ᴀɴᴅ ᴛʜᴇɴ ᴀᴅᴅ ᴍᴇ ᴀɢᴀɪɴ.\n\n<b>ʜᴏᴡ ᴛᴏ ᴍᴀᴋᴇ sᴜᴘᴇʀɢʀᴏᴜᴘ ?</b>\n- ᴍᴀᴋᴇ ʏᴏᴜʀ ɢʀᴏᴜᴘ's ᴄʜᴀᴛ ʜɪsᴛᴏʀʏ <b>ᴠɪsɪʙʟᴇ</b> ᴏɴᴄᴇ."
 start_5 : "<b>↝ ʙʟᴀᴄᴋʟɪsᴛᴇᴅ ᴄʜᴀᴛ ↜</b>\n\nᴛʜɪs ᴄʜᴀᴛ ɪs ʙʟᴀᴄᴋʟɪsᴛᴇᴅ ᴏɴ {0} ᴅᴀᴛᴀʙᴀsᴇ.\nʀᴇǫᴜᴇsᴛ ᴀ <a href={1}>sᴜᴅᴏ ᴜsᴇʀ</a> ᴛᴏ ᴜɴʙʟᴀᴄᴋʟɪsᴛ ʏᴏᴜʀ ᴄʜᴀᴛ ᴏʀ ᴠɪsɪᴛ <a href={2}>sᴜᴘᴘᴏʀᴛ ᴄʜᴀᴛ.</a>"
